<resources>
    <!-- Google String Information -->
    <string name="google_map_api_key">AIzaSyBRzWIc0-e9Pob8JYMy-gCJ0qzcnkgZq-g</string>

    <!-- App Name String Information -->
    <string name="app_name">Find My Drink</string>

    <!-- Login String Information -->
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="register_login">Register</string>
    <string name="submit_login">Login</string>

    <!-- Register String Information -->
    <string name="user_register">Username</string>
    <string name="password_register">Password</string>
    <string name="email_register">Email</string>
    <string name="submit_register">Register</string>
    <string name="city_register">City, State, Zipcode</string>


    <!-- Title String Information -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_beer">Add Beer</string>
    <string name="title_add_store">Add Store</string>
    <string name="title_admin_profile">Profile</string>
    <string name="title_admin_store">Profile</string>
    <string name="title_user_search">Search</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_user_home">Home</string>

    <string name="addSandwich">Show List</string>
    <string name="hideSandwich">Hide List</string>
    <string name="inputName">Input Namew</string>
    <string name="wrapName"> Wrap</string>
    <string name="grinderName">Grinder</string>
    <string name="submitName">Submit</string>
    <string name="createSandwich">Create Sandwich</string>
    <string name="predefinedSandwich">StateMachine2</string>

    <string name="textViewProfile">
        This section of the app allows for you the user to search for each selection of beer of
        your choosing. When you search for a beer selection it will offer the store where the beverages
        are located and you as a user can choose which one is closest to you. It will send you to google maps
        and give you the option to use google directions to guide you to the location.
    </string>
    <string name="textViewMain">
        This app is built for users to be able to find their beverage
        of choice. A user can create an account or use this app without an account. With the
        continuation of development with this app, more incentives will be designed for users with
        an account.
    </string>
    <string name="textViewMain2">
        Breweries and distributors. Create an account and spread your product through the app which
        allows your consumers to find your drinks with ease.
    </string>
    <string name="textViewProfileUpdate">
        Several updates to the app include bug fixes to prevent Crashes.
        Google Directions is working properly with the app, and text is added to all of the home
        Pages for each type of user. Unit Tests were created to help with optimization with the app.
        UI updates were also added.
        If there are any suggestions you wish to leave to improve this app, please let us know. at
        FindMyBeer@gmail.com
    </string>
    <string name="textViewAdmin">
        Welcome to the power user page. You are an employee of a company who has access to this page.
        To get started the Add Beer section allows you as a user to add your companies selection to
        the app. This will be updated in real time so that the selection will be visible to all users.
        You also have the option to delete products if you choose to not have it at certain locations.

        If there are any suggestions you wish to leave to improve this app, please let us know. at
        FindMyBeer@gmail.com
    </string>
</resources>
