<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentContainer"
    tools:context="user.ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-152dp"
        tools:layout_editor_absoluteY="-196dp">
        <!-- bottom navigation -->
        <ImageView
            android:id="@+id/addBeerPhoto"
            android:layout_width="267dp"
            android:layout_height="548dp"
            android:layout_marginStart="76dp"
            android:foregroundGravity="center_horizontal"
            app:srcCompat="@drawable/ic_beer_outline" />

        <include layout="@layout/bottom_nav_bar_signedin" />


        <LinearLayout
            android:id="@+id/storeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/favorite_sandwiches_listview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                tools:visibility="gone" />

            <Button
                android:id="@+id/add_sandwich_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addSandwich" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sandwich_inputs_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/StoreName"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inputName"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/submitName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_sandwich_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/predefinedSandwich" />

            <ListView
                android:id="@+id/predefined_sandwiches_listview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createSandwich" />
            <Button
                android:id="@+id/hide_sandwich_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addSandwich" />

        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>